--- a/src/widgets/filmCard/filmCard.module.scss
+++ b/src/widgets/filmCard/filmCard.module.scss
@@ -2,8 +2,9 @@
  width: 270px;
  cursor: pointer;
  margin-right: 20px;
+ margin-bottom: 15px;
  transition: 0.2s width;
-
+  
  &__image {
   width: 100%;
   height: 150px;
