--- a/src/entities/search/ui/searchBar/searchBar.module.scss
+++ b/src/entities/search/ui/searchBar/searchBar.module.scss
@@ -1,5 +1,12 @@
+.Search{
+ width: 1070px;
+ display: flex;
+ margin: 100px auto; 
+ text-align: center;
+ align-items: flex-start;
+}
+
 .SearchBar {
- margin: 100px auto;
  text-align: center;
  width: 870px;
 
