--- a/src/entities/search/ui/searchBar/searchBar.module.scss
+++ b/src/entities/search/ui/searchBar/searchBar.module.scss
@@ -1,22 +1,44 @@
-.Search{
- width: 1070px;
- display: flex;
- margin: 100px auto; 
- text-align: center;
- align-items: flex-start;
+@import '/src/shared/styles/variables.scss';
+
+.Search {
+    width: 1070px;
+    display: flex;
+    margin: 100px auto;
+    text-align: center;
+    align-items: flex-start;
 }
 
 .SearchBar {
- text-align: center;
- width: 870px;
+    text-align: center;
+    width: 870px;
 
- &__items {
-  background-color: #222222;
-  width: 100%;
-  height: 500px;
-  border-radius: 10px;
-  padding: 20px;
-  cursor: pointer;
-  overflow-y: auto;
- }
+    &__items {
+        background-color: #222222;
+        width: 100%;
+        height: 500px;
+        border-radius: 10px;
+        padding: 20px;
+        cursor: pointer;
+        overflow-y: auto;
+    }
+}
+
+@media (max-width: $breakpoint__xl) {
+    .Search {
+        margin: 0px auto;
+        width: 670px;
+    }
+
+    .SearchBar {
+        &__items {
+            height: 400px;
+        }
+    }
+}
+
+@media (max-width: $breakpoint__sm) {
+    .Search {
+        margin: 0px;
+        width: 100%;
+    }
 }
