--- a/src/entities/search/ui/searchBlock/searchBlock.module.scss
+++ b/src/entities/search/ui/searchBlock/searchBlock.module.scss
@@ -1,48 +1,77 @@
-.Navlink{
- text-decoration: none;
+@import '/src/shared/styles/variables.scss';
+
+.Navlink {
+    text-decoration: none;
 }
 
 .film {
- padding: 10px;
- display: flex;
- border-radius: 10px;
- transition: 0.5s;
- align-items: center;
+    padding: 10px;
+    display: flex;
+    border-radius: 10px;
+    transition: 0.5s;
+    align-items: center;
 
- .film__poster {
-  width: 150px;
-  height: 100px;
- }
+    .film__poster {
+        width: 150px;
+        height: 100px;
+    }
 
- .title {
-  margin-left: 10px;
+    .title {
+        margin-left: 10px;
 
-  h1 {
-   text-align: start;
-   color: #fff;
-   font-size: 24px;
-   text-decoration: none;
-  }
+        h1 {
+            text-align: start;
+            color: #fff;
+            font-size: 24px;
+            text-decoration: none;
+        }
 
-  .title__info {
-   display: flex;
-   margin-top: 5px;
+        .title__info {
+            display: flex;
+            margin-top: 5px;
 
-   .grade {
-    color: green;
-    font-size: 19px;
-   }
+            .grade {
+                color: green;
+                font-size: 19px;
+            }
 
-   .year,
-   .type {
-    margin-left: 6px;
-    color: #ccc;
-    font-size: 19px;
-   }
-  }
- }
+            .year,
+            .type {
+                margin-left: 6px;
+                color: #ccc;
+                font-size: 19px;
+            }
+        }
+    }
 
- &:hover {
-  background-color: #3D3D3D;
- }
+    &:hover {
+        background-color: #3D3D3D;
+    }
+}
+
+
+@media (max-width: $breakpoint__sm) {
+    .film {
+        .film__poster {
+            width: 100px;
+            height: 80px;
+        }
+
+        .title {
+            h1 {
+                font-size: 19px;
+            }
+
+            .title__info {
+                .grade {
+                    font-size: 14px;
+                }
+                .year,
+                .type {
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+
 }
