--- a/src/features/slider/ui/slider/slider.module.scss
+++ b/src/features/slider/ui/slider/slider.module.scss
@@ -1,31 +1,55 @@
-.slider{
- width: 870px;
- display: flex;
- align-items: center;
- position: relative;
- overflow: hidden;
- &__line{
-  display: flex;
-  position: relative;
-  transition: 0.5s;
- }
- &__button{
-  position: absolute;
-  color: #fff;
-  background-color: #000;
-  padding: 2px 16px 4px 14px;
-  border-radius: 200px;
-  z-index: 1000;
-  cursor: pointer;
- }
- &__buttonRigth{
-  position: absolute;
-  right: 0px;
-  color: #fff;
-  background-color: #000;
-  padding: 2px 16px 4px 14px;
-  border-radius: 200px;
-  z-index: 1000;
-  cursor: pointer;
- }
+@import '/src/shared/styles/variables.scss';
+
+.slider {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+
+    &__line {
+        display: flex;
+        position: relative;
+        transition: 0.5s;
+    }
+
+    &__button {
+        position: absolute;
+        color: #fff;
+        background-color: #000;
+        padding: 2px 16px 4px 14px;
+        border-radius: 200px;
+        z-index: 1000;
+        cursor: pointer;
+    }
+
+    &__buttonRigth {
+        position: absolute;
+        right: 0px;
+        color: #fff;
+        background-color: #000;
+        padding: 2px 16px 4px 14px;
+        border-radius: 200px;
+        z-index: 1000;
+        cursor: pointer;
+    }
+}
+
+
+@media (max-width: $breakpoint__sm) {
+    .slider {
+
+        &__button,
+        &__buttonRigth {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: $breakpoint__min) {
+    .slider {
+        &__line {
+            flex-wrap: wrap;
+        }
+    }
 }
