--- a/src/entities/profile/ui/ProfileComponent/ProfileComponent.module.scss
+++ b/src/entities/profile/ui/ProfileComponent/ProfileComponent.module.scss
@@ -1,3 +1,6 @@
+@import '/src/shared/styles/variables.scss';
+
+
 .Profile{
  background-color: #222222;
  margin: 100px auto;
@@ -13,5 +16,20 @@
   display: flex;
   align-items: center;
   position: relative;
+ }
+}
+
+@media (max-width: $breakpoint__md) {
+ .Profile {
+  margin: 100px auto;
+  width: 670px;
+ }
+
+}
+
+@media (max-width: $breakpoint__sm) {
+ .Profile {
+  margin: 25px auto;
+  width: 100%;
  }
 }
