--- a/src/processes/vidio/ui/vidio/vidio.module.scss
+++ b/src/processes/vidio/ui/vidio/vidio.module.scss
@@ -1,27 +1,31 @@
 .shadow {
- position: absolute;
- background-color: #000;
- opacity: 0.5;
- width: 100%;
- height: 100vh;
+    position: absolute;
+    background-color: #000;
+    opacity: 0.5;
+    width: 100%;
+    height: 100vh;
 }
 
 .Trailer {
- position: absolute;
- z-index: 2000;
- background-color: #262626;
- padding: 20px;
- .close {
-  text-align: end;
-  cursor: pointer;
+    z-index: 200;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 2000;
+    background-color: #262626;
+    padding: 20px;
 
-  img {
-   width: 15px;
-  }
- }
+    .close {
+        text-align: end;
+        cursor: pointer;
 
- .player {
-  width: 1100px;
-  height: 600px;
- }
+        img {
+            width: 15px;
+        }
+    }
+}
+
+.Vidio {
+    width: 100%;
+    height: 100%;
 }
