--- a/src/processes/rating/ui/ratingWindow/ratingWindow.module.scss
+++ b/src/processes/rating/ui/ratingWindow/ratingWindow.module.scss
@@ -1,86 +1,154 @@
+@import '/src/shared/styles/variables.scss';
+
 .WindowStar {
- background-color: #171717;
- position: absolute;
- width: 100%;
- height: 100vh;
- z-index: 2000;
- padding: 50px;
+    background-color: #171717;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 2000;
+    padding: 50px;
 
- .close {
-  float: right;
+    .close {
+        float: right;
 
-  img {
-   width: 20px;
-   cursor: pointer;
-  }
- }
-
- .buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20%;
-
-  .star {
-   cursor: pointer;
-   text-align: center;
-   margin: 10px;
-
-   svg {
-    width: 50px;
-    height: 50px;
-   }
-
-   h3 {
-    color: #5f5f5f;
-    font-size: 20px;
-   }
-
-   &:hover {
-    svg {
-     fill: gold;
-
-     path {
-      stroke: gold;
-     }
+        img {
+            width: 20px;
+            cursor: pointer;
+        }
     }
 
-    h3 {
-     color: #fff;
+    .buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20%;
+
+        .star {
+            cursor: pointer;
+            text-align: center;
+            margin: 10px;
+
+            svg {
+                width: 50px;
+                height: 50px;
+            }
+
+            h3 {
+                color: #5f5f5f;
+                font-size: 20px;
+            }
+
+            &:hover {
+                svg {
+                    fill: gold;
+
+                    path {
+                        stroke: gold;
+                    }
+                }
+
+                h3 {
+                    color: #fff;
+                }
+            }
+        }
+
+        .starActive {
+            cursor: pointer;
+            text-align: center;
+            margin: 10px;
+
+            svg {
+                width: 50px;
+                height: 50px;
+                fill: gold;
+
+                path {
+                    stroke: gold;
+                }
+            }
+
+            h3 {
+                color: #fff;
+                font-size: 20px;
+            }
+        }
+
+        .rate {
+            padding: 15px 25px;
+            background-color: #B43A2D;
+            border-radius: 10px;
+            margin-left: 5px;
+            cursor: pointer;
+            border: none;
+            font-size: 19px;
+            color: #fff;
+        }
     }
-   }
-  }
+}
 
-  .starActive {
-   cursor: pointer;
-   text-align: center;
-   margin: 10px;
 
-   svg {
-    width: 50px;
-    height: 50px;
-    fill: gold;
-
-    path {
-     stroke: gold;
+@media (max-width: $breakpoint__sm) {
+    .WindowStar {
+        .buttons {
+            flex-wrap: wrap;
+        }
     }
-   }
+}
 
-   h3 {
-    color: #fff;
-    font-size: 20px;
-   }
-  }
+@media (max-width: $breakpoint__mini) {
+    .WindowStar {
+        .buttons {
+        }
+        .star {
+            cursor: pointer;
+            text-align: center;
+            margin: 10px;
 
-  .rate {
-   padding: 15px 25px;
-   background-color: #B43A2D;
-   border-radius: 10px;
-   margin-left: 5px;
-   cursor: pointer;
-   border: none;
-   font-size: 19px;
-   color: #fff;
-  }
- }
+            svg {
+                width: 50px;
+                height: 50px;
+            }
+
+            h3 {
+                color: #5f5f5f;
+                font-size: 20px;
+            }
+
+            &:hover {
+                svg {
+                    fill: gold;
+
+                    path {
+                        stroke: gold;
+                    }
+                }
+
+                h3 {
+                    color: #fff;
+                }
+            }
+        }
+
+        .starActive {
+            cursor: pointer;
+            text-align: center;
+            margin: 10px;
+
+            svg {
+                width: 50px;
+                height: 50px;
+                fill: gold;
+
+                path {
+                    stroke: gold;
+                }
+            }
+
+            h3 {
+                color: #fff;
+                font-size: 20px;
+            }
+        }
+    }
 }
